# actions-rs

./: .dprint.jsonc  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml  nightly.toml
.github/workflows/: ci.yml  crates-io.yml
.zed/: settings.json
examples/: ci_selfcheck.rs  demo.rs
src/: annotation.rs  command.rs  env.rs  error.rs  escape.rs  file_command.rs  input.rs  lib.rs  log.rs  macros.rs  output.rs  summary.rs
tests/: env_files.rs
